force-app/main/default/objects/User/fields/Primary_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Type__c</fullName>
    <label>Primary Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Sold-To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>