force-app/main/default/objects/User/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
                <label>Representative</label>
            </value>
            <value>
                <fullName>User</fullName>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>